@@ -1,6 +1,7 @@
 version 0.83.01
 	servermode subcommand: set_shutter_speed, set_iso
 	servermode: avoid segmentation fault if camera is not connected
+	android: bracketing (if set on the camera)
 
 version 0.83.00 ( 2016-01-29 )
 	Limited K-3 II support (Testing)
